# athena

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  athena-juggler.xml  athena.xml  cb_Solenoid.xml  ci_GEM.xml  geo.xml  manifest.txt  materials.xml  reference_detector.xml
calibrations/: calo_digi_canyonlands.json  ffi_zdc.json  geometry-map.json
compact/: B0_tracker.xml  allsilicon_simplified.xml  cb_CTD_Si.xml  cb_DIRC.xml  cb_Solenoid.xml  cb_VTX_Barrel.xml  ce_GEM.xml  ce_ecal.xml  ce_ecal_crystal_glass.xml  ce_mrich.xml  central_tracker.xml  central_tracker_hybrid_v2.xml  ci_GEM.xml  ci_HCAL.xml  ci_ecal.xml  ci_ecal_scfi.xml  ci_ecal_shashlik.xml  colors.xml  colors2.xml  colors_geoviewer.xml  definitions.xml  dirc.xml  display.xml  display_detailed.xml  display_geoviewer.xml  drich.xml  ecal.xml  ecal_barrel.xml  ecal_barrel_hybrid.xml  ecal_barrel_interlayers.xml  ecal_forward_homogenous.xml  ecal_forward_scfi.xml  erich.xml  fake_dirc.xml  far_forward_detectors.xml  far_forward_offM_tracker.xml  far_forward_romanpots.xml  ffi_ZDC.xml  forward_rich.xml  forward_trd.xml  (+24 more)
compact/subsystem_views/: calorimeters.xml  dirc_only.xml  drich_only.xml  inner_detector.xml  inner_tracking_only.xml  ip6.xml  pfrich_only.xml  pid_only.xml  tof_only.xml  tracking_only.xml  vertex_only.xml
macro/: dawn_picture.mac  dawn_picture2.mac
reports/templates/: detector_views.md
scripts/: ce_ecal_placement.py  checkOverlaps.py  convert_to_gdml.py  run_detector_simulation.py  run_simulation.sh  run_topside.py  test_ACTS.cxx  test_matscan.cxx
scripts/view1/: .DAWN_1.history  generate_eps
scripts/view12/: generate_eps
scripts/view13/: generate_eps
scripts/view14/: generate_eps
scripts/view15/: generate_eps
scripts/view2/: .DAWN_1.history
scripts/view20/: .DAWN_1.history  generate_eps
scripts/view6/: generate_eps
src/: BarrelBarDetectorWithSideFrame_geo.cpp  BarrelCalorimeterHybrid_geo.cpp  BarrelCalorimeterInterlayers_geo.cpp  BarrelCalorimeter_geo.cpp  BarrelTrackerWithFrame_geo.cpp  CylinderTrackerBarrel_geo.cpp  DIRC_geo.cpp  DRICH_geo.cpp  DRich.cpp  DRich_geo.cpp  ERich_geo.cpp  EcalBarrel_geo.cpp  FieldMapBrBz.cpp  FileLoader.cpp  FileLoaderHelper.h  ForwardRICH_geo.cpp  GaseousRICH_geo.cpp  GeometryHelpers.cpp  GeometryHelpers.h  HomogeneousCalorimeter_geo.cpp  HybridCalorimeter_geo.cpp  MRich.cpp  MRich_geo.cpp  PFRICH_geo.cpp  PfRICH_geo.cpp  PolyhedraEndcapCalorimeter2_geo.cpp  ScFiCalorimeter_geo.cpp  SiVertexBarrel_geo.cpp  SimpleDiskTracker_geo.cpp  TestDetector.cpp  TrapEndcapTracker_geo.cpp  allsilicon_support.cpp  cb_CTD_Si.cpp  cb_DIRC.cpp  cb_Solenoid.cpp  cb_VTX_Barrel.cpp  ce_GEM.cpp  ce_MRICH.cpp  ci_GEM.cpp  ci_HCAL.cpp  (+5 more)
src/attic/: ScFiCalorimeter_geo-cover-noasm.cpp  ScFiCalorimeter_geo-scfi-layer.cpp  ScFiCalorimeter_geo-scfi.cpp  ScFiCalorimeter_geo-union.cpp
views/: config.yml  generate_prim_files.yml  view1.yml  view11.yml  view12.yml  view13.yml  view14.yml  view15.yml  view2.yml  view20.yml  view3.yml  view6.yml  view7.yml
